src/objects/APTS_IntegrationMappingParameters__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>SAP Integration Parameters Mappings - Used to prepare JSON request.</description>
    <fields>
        <fullName>APTS_Country__c</fullName>
        <label>Country</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ObjectField__c</fullName>
        <label>Object Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ParameterName__c</fullName>
        <label>Parameter Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ParameterValue__c</fullName>
        <label>Parameter Value</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_TargetObject__c</fullName>
        <label>Target Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Integration Mapping Parameters</label>
</CustomObject>